--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@zxing/library": "^0.21.3",
     "formik": "^2.4.6",
     "leaflet": "^1.9.4",
     "next": "14.2.13",
