--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
+    "react-toastify": "^10.0.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
